frontend/src/app/app-root/starter/starter.component.scss
:host {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.intro {
  width: 684px;
  margin: 48px 0;
  display: flex;
  align-items: center;
  gap: 24px;

  .companion-image {
    width: 94px;
    height: 94px;
    flex-shrink: 0;
    aspect-ratio: 1/1;
  }

  .intro-heading {
    font-weight: 700;
  }
}

.cards {
  width: 684px;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.scroll-button {
  position: sticky;
  bottom: 24px;
  right: 24px;
  align-self: end;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.sentinel {
  width: 100%;
  height: 1px;
}

.button-box {
  margin-top: auto;
  align-self: end;
  display: flex;
  gap: 9px;
  padding: 20px;
}

